# SpeedyFibonacci

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
benchmarking/: __init__.py  benchmark_runner.py  technique_loader.py  timer.py  validators.py
docs/: CITATIONS.md  COMPLEXITY_ANALYSIS.md  SETUP.md  THEORY.md
output/: __init__.py  console_formatter.py  csv_exporter.py  visualizer.py
results/: .gitkeep
scripts/: clean.py  run_benchmark.py  setup_cython.py
techniques/: __init__.py
techniques/01_naive_recursion/: README.md  __init__.py  fibonacci.py
techniques/02_memoized_recursion/: README.md  __init__.py  fibonacci.py
techniques/03_dynamic_programming/: README.md  __init__.py  fibonacci.py
techniques/04_matrix_exponentiation/: README.md  __init__.py  fibonacci.py
techniques/05_binets_formula/: README.md  __init__.py  fibonacci.py
techniques/06_generator_based/: README.md  __init__.py  fibonacci.py
techniques/07_numpy_vectorized/: README.md  __init__.py  fibonacci.py
techniques/08_numba_jit/: README.md  __init__.py  fibonacci.py
techniques/09_cython_optimized/: README.md  __init__.py  fibonacci.py  fibonacci_impl.pyx
techniques/10_iterative_space_optimized/: README.md  __init__.py  fibonacci.py
techniques/11_fast_doubling/: README.md  __init__.py  fibonacci.py
techniques/12_parallel_processing/: README.md  __init__.py  fibonacci.py
tests/: __init__.py  test_techniques.py
utils/: __init__.py  base_technique.py  constants.py
