[build-system]
requires = ["setuptools>=65.0", "Cython>=3.0.0", "numpy>=1.24.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speedyfibonacci"
version = "1.0.0"
description = "Educational benchmark suite for Fibonacci calculation techniques in Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "SpeedyFibonacci Contributors"}
]
keywords = ["fibonacci", "benchmark", "algorithms", "education", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.57.0",
    "Cython>=3.0.0",
    "matplotlib>=3.7.0",
    "tabulate>=0.9.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
]

[project.scripts]
speedyfib = "scripts.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["techniques*", "benchmarking*", "output*", "utils*", "scripts*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
